-
Bug
-
Resolution: Fixed
-
P3
-
9
-
JDK 1.9.0 (build 1.9.0-ea-fastdebug-b52)
Windows 8.1 with HiDPI display
-
b114
-
windows_8
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8156386 | 8u111 | Alexandr Scherbatiy | P3 | Resolved | Fixed | b01 |
| JDK-8153959 | 8u102 | Alexandr Scherbatiy | P3 | Resolved | Fixed | b03 |
| JDK-8162222 | emb-8u111 | Alexandr Scherbatiy | P3 | Resolved | Fixed | b01 |
Run the code:
-----------------------
import javax.swing.*;
public class JMenuTest {
public static void main(String[] args) {
SwingUtilities.invokeLater(() -> {
try {
UIManager.setLookAndFeel("com.sun.java.swing.plaf.windows.WindowsLookAndFeel");
} catch (Exception ex) {
throw new RuntimeException(ex);
}
JFrame frame = new JFrame();
frame.setSize(200, 200);
frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
JMenuBar menuBar = new JMenuBar();
menuBar.add(new JMenu("Test 1"));
menuBar.add(new JMenu("Test 2"));
frame.setJMenuBar(menuBar);
frame.setVisible(true);
});
}
}
-----------------------
Compare the menu text with the sample which is run with the Metal L&F.
The text with the Windows L&F is twice bigger than the text with the Metal L&F.
- backported by
-
JDK-8153959 Text size is twice bigger under Windows L&F on Win 8.1 with HiDPI display
-
- Resolved
-
-
JDK-8156386 Text size is twice bigger under Windows L&F on Win 8.1 with HiDPI display
-
- Resolved
-
-
JDK-8162222 Text size is twice bigger under Windows L&F on Win 8.1 with HiDPI display
-
- Resolved
-
- duplicates
-
JDK-8152961 Windows 10 Look and Feel HiDPI Title Buttons Too Big on JInternalFrame
-
- Closed
-
-
JDK-8152980 JTree HiDPI rendering issues in Windows look and feel
-
- Closed
-
- relates to
-
JDK-8151998 VS2010 ThemeReader.cpp(758) : error C3861: 'round': identifier not found
-
- Resolved
-
-
JDK-8149368 [hidpi] JLabel font is twice bigger than JTextArea font on Windows 7,HiDPI, Windows L&F
-
- Resolved
-
-
JDK-8149369 [hidpi] HTML-JLabel font sizes are broken in Windows L&F with HiDPI display
-
- Closed
-
-
JDK-8152585 [hidpi] huge close button cross for JOptionPane's internal frame, when L&F is Windows Classic
-
- Open
-
-
JDK-8149453 [hidpi] JFileChooser does not scale properly on Windows with HiDPI display and Windows L&F
-
- Resolved
-
-
JDK-8137098 Total non-compliance to emerging high-DPI displays (on size 13.3 on laptop)
-
- Closed
-
-
JDK-8149369 [hidpi] HTML-JLabel font sizes are broken in Windows L&F with HiDPI display
-
- Closed
-
-
JDK-8073320 Windows HiDPI Graphics support
-
- Resolved
-