8076545: Text size is twice bigger under Windows L&F on Win 8.1 with HiDPI display 8149453: [hidpi] JFileChooser does not scale properly on Windows with HiDPI display and Windows L&F 8149368: [hidpi] JLabel font is twice bigger than JTextArea font on Windows 7,HiDPI, Windows L&F

Reviewed-by: flar, serb